--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "homepage": "https://github.com/Raouia2011/portfolio#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "javascript": "^1.0.0"
   },
   "description": ""
 }
